--- a/index.html
+++ b/index.html
@@ -6,16 +6,54 @@
   </head>
   <body>
     <div id='container'>
-      <h1>Nupto de Katino kej Ninino</h1>
-      <img src='chapeloflove2      <img src='thelovelylovelylesleygore.png' />
-      <h2>per nupto</h2>
-.png' />
-      <h2>per nupto</h2>
-      <img src='thelovelylovelylesleygore.png' />
-      <h2>per knabinoj</h2>
-      <img src='ronettes.png' />
-      <h2>per danconto</h2>
-      <img src='shangrilas.png' />
+      <div id="slip">
+        <p class='header'>Nupto de</p>
+        <p class='name'>Katino</p>
+        <p class='header'>kej</p>
+        <p class='name'>Ninino</p>
+        <img src='chapeloflove2.png'>
+        <p class='strap'>Per Nupto<p>
+        <div class='wrapper'>
+          <p class='song'>
+            <a href="songs/chapeloflove.mp3">Chapel Of Love</a>
+          </p>
+          <p class='singer'>
+            The Dixie Cups
+          </p>
+        </div>
+        <div class='wrapper'>
+          <p class='song'>
+            (Today I Met)<br />The <span class='strikeout'>Boy</span>Girl I'm Gonna Marry
+            <audio controls preload="none">
+            <src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a" type="audio/mp4">
+              Audio not supported in your browser
+              </audio>
+            <!-- <a href="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a">(Today I Met)<br />The <span class='strikeout'>Boy</span>Girl I'm Gonna Marry</a>
+          </p> -->
+          <p class='singer'>
+            Darlene Love
+          </p>
+        </div>
+        <div class='wrapper'>
+          <p class='song'>
+            <a href="songs/Not-Too-Young-To-Get-Married.m4a">Not Too Young To Get Married</a>
+          </p>
+          <p class='singer'>
+            The Raindrops
+          </p>
+        </div>
+        <img src='thelovelylovelylesleygore.png' />
+        <p class='strap'>Per Knabinoj</p>
+        <img src='ronettes.png' />
+        <p class='strap'>Per Danconto</p>
+        <img src='shangrilas.png' />
+        <div>
+          <p class='bodytext'>
+            &#264; &#284; &#292; &#308; &#364; &#265 &#285; &#293; &#309; &#349; &#365;
+            Now is the winter of our discontent made glorious summer by this son of York.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
