--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
         <p class='name'>Katino</p>
         <p class='header'>kej</p>
         <p class='name'>Ninino</p>
-        <img src='chapeloflove2.png'>
+        <img src='chapeloflove.png'>
         <p class='strap'>Per Nupto<p>
         <div class='wrapper'>
           <p class='song'>
-            <a href="songs/chapeloflove.mp3">Chapel Of Love</a>
+            Chapel Of Love
+            <audio controls preload="none">
+            <source src="songs/Chapel-Of-Love.m4a" type="audio/mp4">
+            <source src="songs/Chapel-Of-Love.ogg" type="audio/ogg">
+            <source src="songs/Chapel-Of-Love.mp3" type="audio/mp3">
+              Audio not supported in your browser
+              </audio>
           </p>
           <p class='singer'>
             The Dixie Cups
@@ -25,27 +31,76 @@
           <p class='song'>
             (Today I Met)<br />The <span class='strikeout'>Boy</span>Girl I'm Gonna Marry
             <audio controls preload="none">
-            <src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a" type="audio/mp4">
+            <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a" type="audio/mp4">
+            <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.ogg" type="audio/ogg">
+            <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.mp3" type="audio/mp3">
               Audio not supported in your browser
               </audio>
-            <!-- <a href="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a">(Today I Met)<br />The <span class='strikeout'>Boy</span>Girl I'm Gonna Marry</a>
-          </p> -->
+          </p>
           <p class='singer'>
             Darlene Love
           </p>
         </div>
         <div class='wrapper'>
           <p class='song'>
-            <a href="songs/Not-Too-Young-To-Get-Married.m4a">Not Too Young To Get Married</a>
+            Not Too Young To Get Married
+            <audio controls preload="none">
+            <source src="songs/Not-Too-Young-To-Get-Married.m4a" type="audio/mp4">
+            <source src="songs/Not-Too-Young-To-Get-Married.ogg" type="audio/ogg">
+            <source src="songs/Not-Too-Young-To-Get-Married.mp3" type="audio/mp3">
+              Audio not supported in your browser
+              </audio>
           </p>
           <p class='singer'>
             The Raindrops
           </p>
         </div>
+        <div class='wrapper'>
+          <p class='song'>
+            Here Comes The Bride
+            <audio controls preload="none">
+            <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
+            <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
+            <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
+              Audio not supported in your browser
+              </audio>
+          </p>
+          <p class='singer'>
+            The Donnels
+          </p>
+        </div>
         <img src='thelovelylovelylesleygore.png' />
         <p class='strap'>Per Knabinoj</p>
+        <div class='wrapper'>
+          <p class='song'>
+            Here Comes The Bride
+            <audio controls preload="none">
+            <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
+            <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
+            <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
+              Audio not supported in your browser
+              </audio>
+          </p>
+          <p class='singer'>
+            The Donnels
+          </p>
+        </div>
         <img src='ronettes.png' />
         <p class='strap'>Per Danconto</p>
+        <div class='wrapper'>
+          <p class='song'>
+            Here Comes The Bride
+            <audio controls preload="none">
+            <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
+            <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
+            <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
+              Audio not supported in your browser
+              </audio>
+          </p>
+          <p class='singer'>
+            The Donnels
+          </p>
+        </div>
         <img src='shangrilas.png' />
         <div>
           <p class='bodytext'>
