--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nupto de Katino kej Ninino</title>
     <link href="nupto.css" rel="stylesheet">
+    <meta
   </head>
   <body>
     <div id='container'>
@@ -14,88 +15,52 @@
         <img src='chapeloflove.png'>
         <p class='strap'>Per Nupto<p>
         <div class='wrapper'>
-          <p class='song'>
+          <div class='song'>
             Chapel Of Love
-            <audio controls preload="none">
-            <source src="songs/Chapel-Of-Love.m4a" type="audio/mp4">
-            <source src="songs/Chapel-Of-Love.ogg" type="audio/ogg">
-            <source src="songs/Chapel-Of-Love.mp3" type="audio/mp3">
-              Audio not supported in your browser
+            <p class='singer'>
+              The Dixie Cups
+            </p>
+            <div class='hider'>
+              <audio controls preload="none">
+                <source src="songs/Chapel-Of-Love.m4a" type="audio/mp4">
+                  <source src="songs/Chapel-Of-Love.ogg" type="audio/ogg">
+                    <source src="songs/Chapel-Of-Love.mp3" type="audio/mp3">
+                      Audio not supported in your browser
               </audio>
-          </p>
-          <p class='singer'>
-            The Dixie Cups
-          </p>
+            </div>
+          </div>
         </div>
         <div class='wrapper'>
-          <p class='song'>
-            (Today I Met)<br />The <span class='strikeout'>Boy</span>Girl I'm Gonna Marry
-            <audio controls preload="none">
-            <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a" type="audio/mp4">
-            <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.ogg" type="audio/ogg">
-            <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.mp3" type="audio/mp3">
-              Audio not supported in your browser
+          <div class='song'>
+            (Today&nbsp;I&nbsp;Met) The&nbsp;<span class='strikeout'>Boy</span>Girl&nbsp;I'm&nbsp;Gonna&nbsp;Marry
+            <p class='singer'>
+              Darlene Love
+            </p>
+            <div class='hider'>
+              <audio controls preload="none">
+                <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.m4a" type="audio/mp4">
+                  <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.ogg" type="audio/ogg">
+                    <source src="songs/Today-I-Met-The-Boy-Im-Gonna-Marry.mp3" type="audio/mp3">
+                      Audio not supported in your browser
               </audio>
-          </p>
-          <p class='singer'>
-            Darlene Love
-          </p>
-        </div>
-        <div class='wrapper'>
-          <p class='song'>
-            Not Too Young To Get Married
-            <audio controls preload="none">
-            <source src="songs/Not-Too-Young-To-Get-Married.m4a" type="audio/mp4">
-            <source src="songs/Not-Too-Young-To-Get-Married.ogg" type="audio/ogg">
-            <source src="songs/Not-Too-Young-To-Get-Married.mp3" type="audio/mp3">
-              Audio not supported in your browser
-              </audio>
-          </p>
-          <p class='singer'>
-            The Raindrops
-          </p>
-        </div>
-        <div class='wrapper'>
-          <p class='song'>
-            Here Comes The Bride
-            <audio controls preload="none">
-            <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
-            <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
-            <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
-              Audio not supported in your browser
-              </audio>
-          </p>
-          <p class='singer'>
-            The Donnels
-          </p>
+            </div>
+          </div>
         </div>
         <img src='thelovelylovelylesleygore.png' />
         <p class='strap'>Per Knabinoj</p>
-        <div class='wrapper'>
-          <p class='song'>
-            Here Comes The Bride
-            <audio controls preload="none">
-            <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
-            <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
-            <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
-              Audio not supported in your browser
-              </audio>
-          </p>
-          <p class='singer'>
-            The Donnels
-          </p>
-        </div>
         <img src='ronettes.png' />
         <p class='strap'>Per Danconto</p>
         <div class='wrapper'>
           <p class='song'>
             Here Comes The Bride
-            <audio controls preload="none">
-            <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
-            <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
-            <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
-              Audio not supported in your browser
+            <span class='hider'>
+              <audio controls preload="none">
+                <source src="songs/Here-Comes-The-Bride.m4a" type="audio/mp4">
+                <source src="songs/Here-Comes-The-Bride.ogg" type="audio/ogg">
+                  <source src="songs/Here-Comes-The-Bride.mp3" type="audio/mp3">
+                    Audio not supported in your browser
               </audio>
+            </span>
           </p>
           <p class='singer'>
             The Donnels
@@ -110,5 +75,6 @@
         </div>
       </div>
     </div>
+    <script src="nupto.js"></script>
   </body>
 </html>
